objects/GCF_Data__c.object
<CustomObject>
    <fields>
        <fullName>BillingPlan_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BillingPlan_E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPlan_R__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BillingPlan_R</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPlan_TIV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BillingPlan_TIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FYM_R__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FYM_R</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FYM_TIV_E__c</fullName>
        <label>FYM_TIV_E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FYM_TIV__c</fullName>
        <label>FYM_TIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FYM_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FYM_U</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incremental_E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_R__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incremental_R</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_TIV_E__c</fullName>
        <label>Incremental_TIV_E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_TIV__c</fullName>
        <label>Incremental_TIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incremental_U</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Final__c</fullName>
        <formula>IF( ISBLANK(Invoice_Date__c) == false, 
    Invoice_Date__c, 
    IF(  ISBLANK(Reference_Order__c) == false, 
        Reference_Order__r.Invoice_Date__c, 
        NULL 
    ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Final</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Date__c</fullName>
        <label>Maintenance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Date__c</fullName>
        <label>Maintenance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Text__c</fullName>
        <externalId>true</externalId>
        <label>Month Text</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <externalId>true</externalId>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <externalId>true</externalId>
        <label>Offering Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_Text__c</fullName>
        <externalId>true</externalId>
        <label>Quarter Text</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <externalId>true</externalId>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recoginized__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recoginized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Contract_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Contract Line Item</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>GCF Data</relationshipLabel>
        <relationshipName>GCF_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GCF Data</relationshipLabel>
        <relationshipName>GCF_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>GCF Data</relationshipLabel>
        <relationshipName>GCF_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Quote_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Quote Product</label>
        <referenceTo>BigMachines__Quote_Product__c</referenceTo>
        <relationshipLabel>GCF Data</relationshipLabel>
        <relationshipName>GCF_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipName>GCF_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>GCF Data</relationshipLabel>
        <relationshipName>GCF_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Booking_Forecast_E__c</fullName>
        <label>Total_Booking_Forecast_E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Booking_Forecast_U__c</fullName>
        <label>Total_Booking_Forecast_U</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Text__c</fullName>
        <externalId>true</externalId>
        <label>Year Text</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <externalId>true</externalId>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GCF Data</label>
    <nameField>
        <displayFormat>CGF#{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCF Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>